<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- login___create_account strings -->

    <string name="app_name">Login - Create account</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="iniciar_sesion_string">Iniciar sesion</string>
    <string name="crear_cuenta_string">Crear cuenta</string>
    <string name="_9_41_am_string">9:41</string>
    <string name="__string"></string>
    <string name="p__string">P.</string>
    <string name="_9_41_am_ek1_string">9:41</string>
    <string name="correo_string">Usuario</string>
    <string name="contrase_a_string">Contraseña</string>
    <string name="iniciar_sesi_n_string">Iniciar Sesion</string>
    <string name="__necesitas_ayuda__string">¿No tienes Cuenta? Registrate!</string>
    <string name="p__ek1_string">P.</string>
    <string name="_9_41_am_ek2_string">9:41</string>
    <string name="registrarse_string">Registrarse</string>
    <string name="__necesitas_ayuda_string">Necesitas ayuda</string>
    <string name="contrase_a_ek1_string">Contrasea</string>
    <string name="confirme_su_contrase_a_string">Confirme su contrasea</string>
    <string name="usuario_string">Usuario</string>
    <string name="correo_ek1_string">Correo</string>
    <string name="experimental_pop__music_session_string">Crear cuenta</string>
    <string name="p__ek2_string">P.</string>
    <string name="_9_41_am_ek3_string">9:41</string>
    <string name="last_week_string">Last week</string>
    <string name="last_month_string">Last month</string>
    <string name="all_time_string">All time</string>
    <string name="total_balance_string">Total Balance</string>
    <string name="___3_210_00_string"> 3.210,00</string>
    <string name="mon_string">Mon</string>
    <string name="tue_string">Tue</string>
    <string name="wed_string">Wed</string>
    <string name="thu_string">Thu</string>
    <string name="fri_string">Fri</string>
    <string name="sat_string">Sat</string>
    <string name="sun_string">Sun</string>
    <string name="__231_30___string">-231,30 </string>
    <string name="tarjeta_string">Tarjeta</string>
    <string name="number_card_string"> 3122</string>
    <string name="total_balance_ek1_string">$ 3.210,00</string>
    <string name="pagos_string">Pagos</string>
    <string name="plaza_sendero_string">Plaza Sendero</string>
    <string name="hoy___18_21_string">Hoy - 18:21</string>
    <string name="__15_00___string">$15,00  </string>
    <string name="plaza_sendero_ek1_string">Plaza Sendero</string>
    <string name="hoy___18_21_ek1_string">Hoy - 18:21</string>
    <string name="__15_00___ek1_string">$15,00  </string>
    <string name="_9_41_am_ek4_string">9:41</string>
    <string name="total_balance_ek2_string">Total Balance</string>
    <string name="___3_210_00_ek1_string"> 3.210,00</string>
    <string name="mon_ek1_string">Mon</string>
    <string name="tue_ek1_string">Tue</string>
    <string name="wed_ek1_string">Wed</string>
    <string name="thu_ek1_string">Thu</string>
    <string name="fri_ek1_string">Fri</string>
    <string name="sat_ek1_string">Sat</string>
    <string name="sun_ek1_string">Sun</string>
    <string name="__231_30___ek1_string">-231,30 </string>
    <string name="number_card_ek1_string"> 3122</string>
    <string name="total_balance_ek3_string"> 3.210,00</string>
    <string name="pagos_ek1_string">Pagos</string>
    <string name="recargar_tarjeta_string">Recargar tarjeta</string>
    <string name="_9_41_am_ek5_string">9:41</string>
    <string name="erick_gomez_string">Erick Gomez</string>
    <string name="cambiar_foto_string">Cambiar foto</string>
    <string name="pefil_string">Pefil</string>
    <string name="vehiculos_string">Vehiculos</string>
    <string name="pago_string">Pago</string>
    <string name="accounts_string">Accounts</string>
    <string name="configuraci_n_string">Configuracin</string>
    <string name="notificaciones_string">Notificaciones</string>
    <string name="ayuda_string">Ayuda</string>
    <string name="informac_n_string">Informacn</string>
    <string name="app_string">App</string>
    <string name="title_activity_park">park</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="banco_text">Banco</string>
    <string name="vence_text">Vence</string>
    <string name="fecha">12/20</string>
    <string name="numero_cuenta">****    ****    ****   0011</string>
    <string name="btn_text">Escanear Tarjeta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>