<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/LayoutTarjeta"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >



    <View android:id="@+id/_bg__create_account___2_ek2"
        android:background="@drawable/_bg__create_account___2_ek2_shape"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="414dp"
        android:layout_height="896dp" />


        <View
            android:id="@+id/bg_ek6"
            android:layout_width="414dp"
            android:layout_height="759dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="79dp"
            android:background="@drawable/bg_ek6_shape" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="178dp"
            android:layout_marginLeft="9mm"
            android:layout_marginTop="120dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/cardiocolor"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="37dp"
                android:src="@drawable/chip_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="22dp"
                android:src="@drawable/cio_ic_mastercard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="79dp"
                android:layout_marginLeft="60dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/numero_cuenta"
                android:textColor="@android:color/white"
                android:textSize="20sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginLeft="22mm"
                android:layout_marginTop="110dp"
                android:layout_marginBottom="23dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/banco_text"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="130dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/vence_text"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewFecha"
                app:layout_constraintEnd_toStartOf="@+id/textViewFecha"
                app:layout_constraintTop_toTopOf="@+id/textViewFecha" />

            <TextView
                android:id="@+id/textViewFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginTop="130dp"
                android:layout_marginLeft="200dp"
                android:layout_marginBottom="23dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/fecha"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="1.4in"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="306dp"
            android:id="@+id/inputMonto">

            <EditText
                android:layout_width="1.4in"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="306dp"
                android:hint="¿Cuanto deseas abonar?"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:fontFamily="Arial"
                android:id="@+id/etMonto"
                />


        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/buttonScanner"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="382dp"
            android:layout_marginEnd="81dp"
            android:background="@drawable/background_btn"

            android:text="Abonar con Tarjeta"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <Button
            android:id="@+id/btnPaypal"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="442dp"
            android:layout_marginEnd="81dp"
            android:background="@drawable/background_btn"

            android:text="Abonar con payPal"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>